# develop_livekit_and_external_ai_module

./: .env.example.txt  .gitignore  README.md  analyze_motions.py  install_artalk.sh  install_artalk_lightning.sh  install_client.sh  install_server.sh  prepare_artalk_avatar.py  pyproject.toml  setup.sh  temp_inference.py
artalk_server/: artalk_sdk.py  evaluation.py  main.py  models.py  validators.py  video_source.py  worker.py
documentation/: ARTalk_Image_Processing_Pipeline.md  ARTalk_Licenses_Summary_EN.md  ARTalk_Licenses_Summary_ES.md  Artalk_Metrics_And_Evaluation.md  Artalk_Metrics_And_Evaluation_En.md  Avatar_Cooking_EN.md  Avatar_Cooking_ES.md  Dynamic_Background_Guide_EN.md  Emotion_Analysis_EN.md  Emotion_Analysis_ES.md  Image_Preprocessor_Usage.md  Image_Preprocessor_Usage_ES.md  Implementation Plan - EN.md  Implementation Plan - ES.md  Microservice_Architecture_Guide_EN.md  Microservice_Architecture_Guide_ES.md  Tavus_Plugin_Analysis_ES.md  iddle_visual_avatar_implementation_plan.md  implementation_plan_en.md  implementation_plan_es.md
example_plugin/: Makefile  pyproject.toml  setup.sh
example_plugin/examples/: .env.example  _basic_agent.py  basic_agent.py  diagnose_gpu.py  emotion_agent.py  fix_basic_agent_emotion.py  verify_gemini.py  verify_gpu_check.py
example_plugin/livekit/plugins/ditto/: __init__.py  audio_processor.py  avatar.py  ditto_sdk.py  emotion_controller.py  version.py  video_source.py
example_plugin/scripts/: download_models.py  fix_ditto_numpy.py  fix_ditto_numpy.sh  fix_tensorrt.sh  fresh_install.sh  install_cudnn.sh  uninstall_models.sh  verify_ditto.py  verify_ditto_deps.py
example_plugin/scripts/install_models/: download_ditto.py  install_ditto.sh
examples/: .env.example  README.md  basic_agent.py  create_avatar_replica.py  example_microservice_agent.py  start_artalk_server.py
examples/temp_files/: install_artalk_lightning.sh
livekit/plugins/artalk/: __init__.py  api.py  avatar.py  models.py
livekit/plugins/artalk_legacy/: __init__.py  artalk_sdk.py  avatar.py  image_preprocessor.py  video_source.py
