[project]
name = "livekit-plugins-ditto"
version = "0.2.0"
description = "LiveKit Agents plugin for Ditto TalkingHead avatar integration"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "Brain-AIX Vancouver", email = "dev@brain-aix.com" }
]
keywords = ["livekit", "agents", "avatar", "ditto", "talking-head", "ai", "webrtc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Communications :: Conferencing",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    # LiveKit Core
    "livekit>=0.17.0",
    "livekit-agents>=0.12.0",
    "livekit-agents[silero,cartesia,openai,deepgram,elevenlabs,turn-detector,google]~=1.3",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.2.1",

    # Audio processing
    "librosa>=0.10.2",
    "soundfile>=0.13.0",

    # Image/Video processing
    "opencv-python-headless>=4.10.0",
    "imageio>=2.36.0",
    "pillow>=11.0.0",

    # Utilities
    "tqdm>=4.67.0",
    "pyyaml>=6.0.0",

    # HTTP client for ditto-service mode
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
# GPU dependencies for embedded/local mode (ditto loaded in-process)
gpu = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "mediapipe",
    "einops",
    "onnxruntime-gpu<1.24",
    "scikit-image",
    "cython",
    "cuda-python==12.1.0",
    "imageio-ffmpeg",
    "colored",
    "polygraphy",
    "numpy>=1.23.0,<2.0.0",
    "filetype",
]

dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
ditto-agent = "examples.basic_agent:main"

[project.urls]
Homepage = "https://github.com/brain-aix/livekit-plugins-ditto"
Documentation = "https://github.com/brain-aix/livekit-plugins-ditto#readme"
Repository = "https://github.com/brain-aix/livekit-plugins-ditto"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["livekit.plugins.ditto"]

[tool.uv]
# Extra index for PyTorch CUDA wheels
extra-index-url = [
    "https://download.pytorch.org/whl/cu121",
    "https://pypi.nvidia.com",
]
index-strategy = "unsafe-best-match"

[tool.uv.extra-build-dependencies]
tensorrt = ["setuptools", "wheel"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
